Add fancy compton effects.

--- a/.compton.conf
+++ b/.compton.conf
@@ -1,17 +1,41 @@
 # Shadow
-shadow = false;
+shadow = true;
+no-dock-shadow = true;
+
+shadow-radius = 4;
+
+shadow-offset-x = -1;
+shadow-offset-y = -1;
 
 # Fading
-fading = false;
+fading = true;
+# The time between steps in a fade in milliseconds. (default 10).
+fade-delta = 5;
+# Opacity change between steps while fading in. (default 0.028).
+fade-in-step = 0.03;
+# Opacity change between steps while fading out. (default 0.03).
+fade-out-step = 0.03;
 
-# Inactive window dim
-inactive-dim = 0.1;
-menu-opacity = 1; # Don't dim menus.
-focus-exclude = [ "i:a:slock", "name *= 'Firefox'" ];
+# Alpha
+menu-opacity = 1;
+inactive-opacity = 0.5;
+active-opacity = 1;
+frame-opacity = 1;
+inactive-opacity-override = false;
+alpha-step = 0.06;
+focus-exclude = [ "name = 'i3lock'", "name *= 'Firefox'" ];
+blur-background = true;
+
+# Use WM_TRANSIENT_FOR to group windows, and consider windows in the same group focused at the same time.
+detect-transient = true;
+# Use WM_CLIENT_LEADER to group windows, and consider windows in the same group focused at the same time.
+# WM_TRANSIENT_FOR has higher priority if --detect-transient is enabled, too.
+detect-client-leader = true;
 
 # Other
 backend = "glx";
 vsync = "opengl-swc";
+# mark-ovredir-focused = true;
 
 # Window type settings
 wintypes:
