Tweaked XMonad layouts and compositing a bit.

--- a/.compton.conf
+++ b/.compton.conf
@@ -2,10 +2,10 @@
 shadow = true;
 no-dock-shadow = true;
 
-shadow-radius = 4;
+shadow-radius = 2;
 
-shadow-offset-x = -1;
-shadow-offset-y = -1;
+shadow-offset-x = 0;
+shadow-offset-y = 0;
 
 # Fading
 fading = true;
@@ -21,9 +21,9 @@ menu-opacity = 1;
 inactive-opacity = 0.5;
 active-opacity = 1;
 frame-opacity = 1;
-inactive-opacity-override = false;
+inactive-opacity-override = true;
 alpha-step = 0.06;
-focus-exclude = [ "name = 'i3lock'", "name *= 'Firefox'" ];
+focus-exclude = [ "name = 'i3lock'", "class_g = 'Dmenu'", "name *= 'Firefox'" ];
 blur-background = true;
 
 # Use WM_TRANSIENT_FOR to group windows, and consider windows in the same group focused at the same time.
