--- a/.compton.conf
+++ b/.compton.conf
@@ -30,7 +30,7 @@ blur-background = true;
 detect-transient = true;
 # Use WM_CLIENT_LEADER to group windows, and consider windows in the same group focused at the same time.
 # WM_TRANSIENT_FOR has higher priority if --detect-transient is enabled, too.
-detect-client-leader = true;
+detect-client-leader = false;
 
 # Other
 backend = "glx";
