Tweaked compton config for better performance

--- a/.compton.conf
+++ b/.compton.conf
@@ -2,7 +2,7 @@
 shadow = true;
 no-dock-shadow = true;
 
-shadow-radius = 2;
+shadow-radius = 1;
 
 shadow-offset-x = 0;
 shadow-offset-y = 0;
@@ -10,9 +10,9 @@ shadow-offset-y = 0;
 # Fading
 fading = true;
 # The time between steps in a fade in milliseconds. (default 10).
-fade-delta = 5;
+fade-delta = 10;
 # Opacity change between steps while fading in. (default 0.028).
-fade-in-step = 0.03;
+fade-in-step = 0.05;
 # Opacity change between steps while fading out. (default 0.03).
 fade-out-step = 0.03;
 
@@ -35,15 +35,17 @@ detect-client-leader = false;
 # Other
 backend = "glx";
 vsync = "opengl-swc";
-# mark-ovredir-focused = true;
+paint-on-overlay = true;
+glx-no-stencil = true;
+glx-no-rebind-pixmap = true;
 
 # Window type settings
 wintypes:
 {
-  tooltip = { fade = true; shadow = false; opacity = 0.75; focus = true; };
-  menu = { fade = false; shadow = false; opacity = 1; focus = true; };
-  dropdown_menu = { fade = false; shadow = false; opacity = 1; focus = true; };
-  popup_menu = { fade = false; shadow = false; opacity = 1; focus = true; };
+  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; };
+  menu = { fade = true; shadow = true; opacity = 0.75; focus = true; };
+  dropdown_menu = { fade = false; shadow = true; opacity = 0.75; focus = true; };
+  popup_menu = { fade = false; shadow = true; opacity = 0.75; focus = true; };
   # fade: Fade the particular type of windows.
   # shadow: Give those windows shadow
   # opacity: Default opacity for the type of windows.
