--- a/.config/taffybar/taffybar.rc
+++ b/.config/taffybar/taffybar.rc
@@ -1,7 +1,32 @@
-style "default" {
-    bg[NORMAL]   = "#2d2d2d"
-    fg[NORMAL]   = "#dcdcdc"
-    text[NORMAL] = "#dcdcdc"
+style "taffybar-default" {
+  color["base03"]    = "#002b36"
+  color["base02"]    = "#073642"
+  color["base01"]    = "#586e75"
+  color["base00"]    = "#657b83"
+  color["base0"]     = "#839496"
+  color["base1"]     = "#93a1a1"
+  color["base2"]     = "#eee8d5"
+  color["base3"]     = "#fdf6e3"
+  color["yellow"]    = "#b58900"
+  color["orange"]    = "#cb4b16"
+  color["red"]       = "#dc322f"
+  color["magenta"]   = "#d33682"
+  color["violet"]    = "#6c71c4"
+  color["blue"]      = "#268bd2"
+  color["cyan"]      = "#2aa198"
+  color["green"]     = "#859900"
+
+  fg[NORMAL]      = @base0
+  text[NORMAL]    = @base0
+  bg[NORMAL]      = @base03
+  base[NORMAL]    = @base03
+
+  fg[PRELIGHT]    = @base2
+  bg[PRELIGHT]    = @base2
+}
+
+style "taffybar-active-window" = "taffybar-default" {
+  fg[NORMAL] = @green
 }
 
 style "notification-button" = "default" {
@@ -9,6 +34,7 @@ style "notification-button" = "default" {
     fg[NORMAL]   = "#FF0000"
 }
 
-widget "Taffybar*" style "default"
+widget "Taffybar*" style "taffybar-default"
+widget "Taffybar*WindowSwitcher*label" style "taffybar-active-window"
 widget "*NotificationCloseButton" style "notification-button"
-gtk-font-name="Source Code Pro 9"
+gtk-font-name="Source Code Pro Bold 10"
