Rework XMonad keybindings
The XMonad configuration now uses sub-mappings for emacs-style keychords.

--- a/.compton.conf
+++ b/.compton.conf
@@ -23,7 +23,12 @@ active-opacity = 1;
 frame-opacity = 1;
 inactive-opacity-override = true;
 alpha-step = 0.06;
-focus-exclude = [ "name = 'i3lock'", "class_g = 'Dmenu'", "name *= 'Firefox'" ];
+focus-exclude = [
+    "name = 'i3lock'",
+    "class_g = 'dzen'",
+    "name = 'dzen slave'",
+    "class_g = 'Dmenu'",
+    "name *= 'Firefox'" ];
 blur-background = true;
 
 # Use WM_TRANSIENT_FOR to group windows, and consider windows in the same group focused at the same time.
