Add separate compton configs per-machine

--- a/.config/compton/compton.conf
+++ b/.config/compton/compton.conf
@@ -27,6 +27,7 @@ focus-exclude = [
     "name = 'i3lock'",
     "class_g = 'dzen'",
     "name = 'dzen slave'",
+    "name = 'livewallpaper'",
     "class_g = 'Dmenu'",
     "name *= 'Firefox'" ];
 blur-background = true;
@@ -36,10 +37,6 @@ detect-transient = true;
 # Use WM_CLIENT_LEADER to group windows, and consider windows in the same group focused at the same time.
 # WM_TRANSIENT_FOR has higher priority if --detect-transient is enabled, too.
 detect-client-leader = false;
-
-# Other
-backend = "glx";
-vsync = "opengl-swc";
 
 # Window type settings
 wintypes:
