--- a/.config/compton/homebase.conf
+++ b/.config/compton/homebase.conf
@@ -1,5 +1,10 @@
 # Homebase specific Compton config
 
+backend = "glx";
+vsync = "none";
+
 paint-on-overlay = true;
 glx-no-stencil = true;
 glx-no-rebind-pixmap = true;
+glx-swap-method = 1;
+xrender-sync-fence = true;
