--- a/.config/picom/homebase.conf
+++ b/.config/picom/homebase.conf
@@ -1,9 +1,8 @@
 # Homebase specific Compton config
 
 backend = "glx";
-vsync = "none";
+vsync = false;
 
-paint-on-overlay = true;
 glx-no-stencil = true;
 glx-no-rebind-pixmap = true;
 glx-swap-method = 1;
