--- a/xmonad/forkk-xmonad.cabal
+++ b/xmonad/forkk-xmonad.cabal
@@ -10,6 +10,7 @@ executable xmonad
   main-is:             xmonad.hs
   other-modules:       SubmapMenu
                      , NamedActions
+                     , TaffyPagerHints
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , containers
@@ -17,6 +18,7 @@ executable xmonad
                      , process
                      , unix
                      , network-bsd
+                     , utf8-string
                      , xmonad>=0.15
                      , xmonad-contrib>=0.15
                      , X11>=1.8
