--- a/taffybar/forkk-taffybar.cabal
+++ b/taffybar/forkk-taffybar.cabal
@@ -19,6 +19,7 @@ executable taffybar
                      , gi-gtk
                      , taffybar
                      , text
+                     , hostname
                      , gi-cairo-render>=0.1.0
                      , X11>=1.8
   default-language:    Haskell2010
