Better lock screen; picom tweaks

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -2,21 +2,21 @@
 shadow = true;
 
 shadow-radius = 1;
-
+shadow-opacity = 0.42;
 shadow-offset-x = 0;
-shadow-offset-y = 0;
+shadow-offset-y = 1;
 
 # Fading
 fading = true;
 # The time between steps in a fade in milliseconds. (default 10).
-fade-delta = 8;
+fade-delta = 5;
 # Opacity change between steps while fading in. (default 0.028).
-fade-in-step = 0.04;
+fade-in-step = 0.028;
 # Opacity change between steps while fading out. (default 0.03).
-fade-out-step = 0.04;
+fade-out-step = 0.03;
 
 # Alpha
-inactive-opacity = 0.9;
+inactive-opacity = 0.8;
 active-opacity = 1;
 frame-opacity = 1;
 inactive-opacity-override = true;
@@ -28,6 +28,12 @@ focus-exclude = [
     "class_g = 'Dmenu'",
     "name *= 'Firefox'" ];
 blur-background = true;
+blur:
+{
+    method = "gaussian";
+    size = 27;
+    deviation = 7.0;
+};
 
 # Use WM_TRANSIENT_FOR to group windows, and consider windows in the same group focused at the same time.
 detect-transient = true;
@@ -39,9 +45,9 @@ detect-client-leader = false;
 wintypes:
 {
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; };
-  menu = { fade = true; shadow = true; opacity = 1; focus = true; };
-  dropdown_menu = { fade = false; shadow = true; opacity = 1; focus = true; };
-  popup_menu = { fade = false; shadow = true; opacity = 1; focus = true; };
+  menu = { fade = true; shadow = true; opacity = 0.8; focus = true; };
+  dropdown_menu = { fade = true; shadow = true; opacity = 0.8; focus = true; };
+  popup_menu = { fade = true; shadow = true; opacity = 0.8; focus = true; };
   # fade: Fade the particular type of windows.
   # shadow: Give those windows shadow
   # opacity: Default opacity for the type of windows.
