Configure picom animations

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,3 +1,15 @@
+# Animations
+animations: true;
+animation-stiffness = 150
+animation-window-mass = 0.4
+animation-dampening = 10
+animation-clamping = false
+animation-for-open-window = "zoom";
+animation-for-unmap-window = "zoom";
+animation-for-transient-window = "slide-down";
+animation-for-workspace-switch-in = "zoom";
+animation-for-workspace-switch-out = "zoom";
+
 # Shadow
 shadow = true;
 
@@ -9,7 +21,7 @@ shadow-offset-y = 1;
 # Fading
 fading = true;
 # The time between steps in a fade in milliseconds. (default 10).
-fade-delta = 5;
+fade-delta = 3;
 # Opacity change between steps while fading in. (default 0.028).
 fade-in-step = 0.028;
 # Opacity change between steps while fading out. (default 0.03).
