Tweak picom animations

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,14 +1,13 @@
 # Animations
-animations: true;
-animation-stiffness = 150
-animation-window-mass = 0.4
-animation-dampening = 10
-animation-clamping = false
+animations = true;
+animation-stiffness = 200;
+animation-window-mass = 0.4;
+animation-dampening = 10;
+animation-clamping = false;
 animation-for-open-window = "zoom";
-animation-for-unmap-window = "zoom";
 animation-for-transient-window = "slide-down";
-animation-for-workspace-switch-in = "zoom";
-animation-for-workspace-switch-out = "zoom";
+animation-for-workspace-switch-in = "auto";
+animation-for-workspace-switch-out = "auto";
 
 # Shadow
 shadow = true;
@@ -23,9 +22,9 @@ fading = true;
 # The time between steps in a fade in milliseconds. (default 10).
 fade-delta = 3;
 # Opacity change between steps while fading in. (default 0.028).
-fade-in-step = 0.028;
+fade-in-step = 0.014;
 # Opacity change between steps while fading out. (default 0.03).
-fade-out-step = 0.03;
+fade-out-step = 0.015;
 
 # Alpha
 inactive-opacity = 0.8;
@@ -57,12 +56,11 @@ detect-client-leader = false;
 wintypes:
 {
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; };
-  menu = { fade = true; shadow = true; opacity = 0.8; focus = true; };
-  dropdown_menu = { fade = true; shadow = true; opacity = 0.8; focus = true; };
-  popup_menu = { fade = true; shadow = true; opacity = 0.8; focus = true; };
-  # fade: Fade the particular type of windows.
-  # shadow: Give those windows shadow
-  # opacity: Default opacity for the type of windows.
-  # focus: Whether to always consider windows of this type focused.
+  menu = { fade = true; shadow = true; opacity = 0.8; focus = true; animation = "slide-down"; };
+  dropdown_menu = { fade = true; shadow = true; opacity = 0.8; focus = true; animation = "slide-down"; };
+  popup_menu = { fade = true; shadow = true; opacity = 0.8; focus = true; animation = "slide-down"; };
+  
+  dialog = { animation = "slide-down"; };
+  notification = { animation = "slide-down"; };
 };
 
